18:02 Приведены в соответствие 3D превью жестов и их названий с заложенными на протезе

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span class="gestures__arrow-container">
                 <img class="gestures__arrow" src="src/img/arrow-bottom.svg" alt="">
             </span>
-            <h3 class="gestures__title">Коза</h3>
+            <h3 class="gestures__title">щёпоть</h3>
             <span class="gestures__arrow-container">
                 <img class="gestures__arrow gestures__arrow--flipped" src="src/img/arrow-bottom.svg" alt="">
             </span>
@@ -32,11 +32,11 @@
             <img class="gestures__gesture gestures__gesture--l3" src="src/img/gestures/l3.png" alt="">
             <img class="gestures__gesture gestures__gesture--l4" src="src/img/gestures/l4.png" alt="">
             <img class="gestures__gesture gestures__gesture--l5" src="src/img/gestures/l5.png" alt="">
+            <img class="gestures__gesture gestures__gesture--g3" src="src/img/gestures/g3.png" alt="">
+            <img class="gestures__gesture gestures__gesture--g5" src="src/img/gestures/g5.png" alt="">
+            <img class="gestures__gesture gestures__gesture--g4" src="src/img/gestures/g4.png" alt="">
             <img class="gestures__gesture gestures__gesture--g1" src="src/img/gestures/g1.png" alt="">
             <img class="gestures__gesture gestures__gesture--g2" src="src/img/gestures/g2.png" alt="">
-            <img class="gestures__gesture gestures__gesture--g3" src="src/img/gestures/g3.png" alt="">
-            <img class="gestures__gesture gestures__gesture--g4" src="src/img/gestures/g4.png" alt="">
-            <img class="gestures__gesture gestures__gesture--g5" src="src/img/gestures/g5.png" alt="">
         </div>
         <img class="gestures__selected-gesture" src="src/img/gestures/g3.png" alt="">
     </section>
